--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         for (var file of chunk.files) {
           if (file.match(/\.(js|css)$/)) { %>
     <link rel="<%= chunk.initial?'preload':'prefetch' %>" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>"><% }}} %>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0jR9mlAAIz665daba4GL2ZxzE4PVgQas"
+    type="text/javascript"></script>
   </head>
   <body>
     <noscript>
