--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
     <link rel="<%= chunk.initial?'preload':'prefetch' %>" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>"><% }}} %>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0jR9mlAAIz665daba4GL2ZxzE4PVgQas&libraries=geometry"
     type="text/javascript"></script>
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "4de3hc7igu");
+    </script>
   </head>
   <body>
     <noscript>
